fix: make theme-list wrap to prevent linebreaks

--- a/packages/website/src/components/theme-list/theme-list.css
+++ b/packages/website/src/components/theme-list/theme-list.css
@@ -6,6 +6,7 @@
 
 .ma-theme-list__list {
   display: flex;
+  flex-wrap: wrap;
   gap: var(--basis-space-inline-md);
   list-style: none;
   margin-block: 0;
